alfredを追加した

--- a/provisioning/localhost.yml
+++ b/provisioning/localhost.yml
@@ -61,6 +61,7 @@
       - { name: seashore }
       - { name: vagrant }
       - { name: virtualbox }
+      - { name: alfred }
 
   tasks:
     - name: homebrew の tap リポジトリを追加
