--- a/provisioning/localhost.yml
+++ b/provisioning/localhost.yml
@@ -113,8 +113,8 @@
       homebrew_cask: name=xquartz
     - name: fontforge のインストール (for Ricty)
       homebrew: name=fontforge
-    - name: Ricty のインストール
-      homebrew: name=ricty
+    - name: Recty のインストール
+      homebrew: name=ricty install_options=powerline,vim-powerline
     - name: 生成されたフォントファイルをコピー
       shell: cp -f $(brew --cellar ricty)/*/share/fonts/Ricty*.ttf ~/Library/Fonts/
       args:
