--- a/provisioning/localhost.yml
+++ b/provisioning/localhost.yml
@@ -67,6 +67,7 @@
       - { target: ~/Library/Preferences/com.googlecode.iterm2.plist, command: 'Set :"New Bookmarks":0:"Non Ascii Font" "Ricty 14"' }
       - { target: ~/Library/Preferences/com.googlecode.iterm2.plist, command: 'Set :"New Bookmarks":0:"Transparency" 0.122797' }
       - { target: ~/Library/Preferences/com.googlecode.iterm2.plist, command: 'Set :"New Bookmarks":0:"Silence Bell" true' }
+      - { target: ~/Library/Preferences/com.googlecode.iterm2.plist, command: 'Set :"New Bookmarks":0:"Use Bold Font" false' }
 
   tasks:
     - name: homebrew の tap リポジトリを追加
