macのスマートじゃないスマート変換を無効にする設定を追加した

--- a/provisioning/localhost.yml
+++ b/provisioning/localhost.yml
@@ -153,6 +153,10 @@
       shell: defaults write com.apple.ImageCapture disableHotPlug -bool true
     - name: 隠しファイルをFinder上で可視化する
       shell: defaults write com.apple.finder AppleShowAllFiles true
+    - name: スマート引用符を無効に設定
+      shell: defaults write NSGlobalDomain NSAutomaticQuoteSubstitutionEnabled -bool false
+    - name: スマートダッシュを無効に設定
+      shell: defaults write NSGlobalDomain NSAutomaticDashSubstitutionEnabled -bool false
 
   handlers:
     - name: run fc-cache
